# Chess-engine

./: .gitignore  CMakeLists.txt  README.md
src/: chess.h  game.cpp  game.h  main.cpp  piece_utils.h
src/engine/: board.cpp  board.h  engine.cpp  engine.h  move.cpp  move.h  moveGen.cpp  moveGen.h
src/ui/: SDL_RAII.h  mouseState.cpp  mouseState.h  renderer.cpp  renderer.h
